Authentication & Customized User Model

--- a/templates/test.html
+++ b/templates/test.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <font size="3" color="red">Hello World!</font>
+    <li>
+        <a href="{% url 'posts' %}">Home Page</a>
+    </li>
 </body>
 </html>
